// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ROCCurve does not break on empty data 1`] = `
<div>
  <XYPlot
    animation={true}
    className=""
    classes={
      Object {
        "root": "root",
      }
    }
    height={520}
    onMouseLeave={[Function]}
    width={800}
    xDomain={null}
  >
    <VerticalGridLines
      attr="x"
      direction="vertical"
    />
    <HorizontalGridLines
      attr="y"
      direction="horizontal"
    />
    <XAxis
      attr="x"
      attrAxis="y"
      className="axis"
      orientation="bottom"
      title="fpr"
    />
    <YAxis
      attr="y"
      attrAxis="x"
      className="axis"
      orientation="left"
      title="tpr"
    />
    <LineSeries
      className=""
      color="#ddd"
      curve={null}
      data={
        Array [
          Object {
            "x": 0,
            "y": 0,
          },
          Object {
            "x": 0.01,
            "y": 0.01,
          },
          Object {
            "x": 0.02,
            "y": 0.02,
          },
          Object {
            "x": 0.03,
            "y": 0.03,
          },
          Object {
            "x": 0.04,
            "y": 0.04,
          },
          Object {
            "x": 0.05,
            "y": 0.05,
          },
          Object {
            "x": 0.06,
            "y": 0.06,
          },
          Object {
            "x": 0.07,
            "y": 0.07,
          },
          Object {
            "x": 0.08,
            "y": 0.08,
          },
          Object {
            "x": 0.09,
            "y": 0.09,
          },
          Object {
            "x": 0.1,
            "y": 0.1,
          },
          Object {
            "x": 0.11,
            "y": 0.11,
          },
          Object {
            "x": 0.12,
            "y": 0.12,
          },
          Object {
            "x": 0.13,
            "y": 0.13,
          },
          Object {
            "x": 0.14,
            "y": 0.14,
          },
          Object {
            "x": 0.15,
            "y": 0.15,
          },
          Object {
            "x": 0.16,
            "y": 0.16,
          },
          Object {
            "x": 0.17,
            "y": 0.17,
          },
          Object {
            "x": 0.18,
            "y": 0.18,
          },
          Object {
            "x": 0.19,
            "y": 0.19,
          },
          Object {
            "x": 0.2,
            "y": 0.2,
          },
          Object {
            "x": 0.21,
            "y": 0.21,
          },
          Object {
            "x": 0.22,
            "y": 0.22,
          },
          Object {
            "x": 0.23,
            "y": 0.23,
          },
          Object {
            "x": 0.24,
            "y": 0.24,
          },
          Object {
            "x": 0.25,
            "y": 0.25,
          },
          Object {
            "x": 0.26,
            "y": 0.26,
          },
          Object {
            "x": 0.27,
            "y": 0.27,
          },
          Object {
            "x": 0.28,
            "y": 0.28,
          },
          Object {
            "x": 0.29,
            "y": 0.29,
          },
          Object {
            "x": 0.3,
            "y": 0.3,
          },
          Object {
            "x": 0.31,
            "y": 0.31,
          },
          Object {
            "x": 0.32,
            "y": 0.32,
          },
          Object {
            "x": 0.33,
            "y": 0.33,
          },
          Object {
            "x": 0.34,
            "y": 0.34,
          },
          Object {
            "x": 0.35,
            "y": 0.35,
          },
          Object {
            "x": 0.36,
            "y": 0.36,
          },
          Object {
            "x": 0.37,
            "y": 0.37,
          },
          Object {
            "x": 0.38,
            "y": 0.38,
          },
          Object {
            "x": 0.39,
            "y": 0.39,
          },
          Object {
            "x": 0.4,
            "y": 0.4,
          },
          Object {
            "x": 0.41,
            "y": 0.41,
          },
          Object {
            "x": 0.42,
            "y": 0.42,
          },
          Object {
            "x": 0.43,
            "y": 0.43,
          },
          Object {
            "x": 0.44,
            "y": 0.44,
          },
          Object {
            "x": 0.45,
            "y": 0.45,
          },
          Object {
            "x": 0.46,
            "y": 0.46,
          },
          Object {
            "x": 0.47,
            "y": 0.47,
          },
          Object {
            "x": 0.48,
            "y": 0.48,
          },
          Object {
            "x": 0.49,
            "y": 0.49,
          },
          Object {
            "x": 0.5,
            "y": 0.5,
          },
          Object {
            "x": 0.51,
            "y": 0.51,
          },
          Object {
            "x": 0.52,
            "y": 0.52,
          },
          Object {
            "x": 0.53,
            "y": 0.53,
          },
          Object {
            "x": 0.54,
            "y": 0.54,
          },
          Object {
            "x": 0.55,
            "y": 0.55,
          },
          Object {
            "x": 0.56,
            "y": 0.56,
          },
          Object {
            "x": 0.57,
            "y": 0.57,
          },
          Object {
            "x": 0.58,
            "y": 0.58,
          },
          Object {
            "x": 0.59,
            "y": 0.59,
          },
          Object {
            "x": 0.6,
            "y": 0.6,
          },
          Object {
            "x": 0.61,
            "y": 0.61,
          },
          Object {
            "x": 0.62,
            "y": 0.62,
          },
          Object {
            "x": 0.63,
            "y": 0.63,
          },
          Object {
            "x": 0.64,
            "y": 0.64,
          },
          Object {
            "x": 0.65,
            "y": 0.65,
          },
          Object {
            "x": 0.66,
            "y": 0.66,
          },
          Object {
            "x": 0.67,
            "y": 0.67,
          },
          Object {
            "x": 0.68,
            "y": 0.68,
          },
          Object {
            "x": 0.69,
            "y": 0.69,
          },
          Object {
            "x": 0.7,
            "y": 0.7,
          },
          Object {
            "x": 0.71,
            "y": 0.71,
          },
          Object {
            "x": 0.72,
            "y": 0.72,
          },
          Object {
            "x": 0.73,
            "y": 0.73,
          },
          Object {
            "x": 0.74,
            "y": 0.74,
          },
          Object {
            "x": 0.75,
            "y": 0.75,
          },
          Object {
            "x": 0.76,
            "y": 0.76,
          },
          Object {
            "x": 0.77,
            "y": 0.77,
          },
          Object {
            "x": 0.78,
            "y": 0.78,
          },
          Object {
            "x": 0.79,
            "y": 0.79,
          },
          Object {
            "x": 0.8,
            "y": 0.8,
          },
          Object {
            "x": 0.81,
            "y": 0.81,
          },
          Object {
            "x": 0.82,
            "y": 0.82,
          },
          Object {
            "x": 0.83,
            "y": 0.83,
          },
          Object {
            "x": 0.84,
            "y": 0.84,
          },
          Object {
            "x": 0.85,
            "y": 0.85,
          },
          Object {
            "x": 0.86,
            "y": 0.86,
          },
          Object {
            "x": 0.87,
            "y": 0.87,
          },
          Object {
            "x": 0.88,
            "y": 0.88,
          },
          Object {
            "x": 0.89,
            "y": 0.89,
          },
          Object {
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "x": 0.91,
            "y": 0.91,
          },
          Object {
            "x": 0.92,
            "y": 0.92,
          },
          Object {
            "x": 0.93,
            "y": 0.93,
          },
          Object {
            "x": 0.94,
            "y": 0.94,
          },
          Object {
            "x": 0.95,
            "y": 0.95,
          },
          Object {
            "x": 0.96,
            "y": 0.96,
          },
          Object {
            "x": 0.97,
            "y": 0.97,
          },
          Object {
            "x": 0.98,
            "y": 0.98,
          },
          Object {
            "x": 0.99,
            "y": 0.99,
          },
        ]
      }
      getNull={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="dashed"
      strokeWidth={1}
      style={Object {}}
    />
    <LineSeries
      className=""
      color="#4285f4"
      curve="curveBasis"
      data={Array []}
      getNull={[Function]}
      key="0"
      onNearestX={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="solid"
      strokeWidth={2}
      style={Object {}}
    />
    <HighlightOverlay
      className=""
      color="rgb(77, 182, 172)"
      enableX={true}
      enableY={false}
      onBrushEnd={[Function]}
      onDrag={[Function]}
      opacity={0.3}
    />
    <Crosshair
      itemsFormat={[Function]}
      style={
        Object {
          "box": Object {},
          "line": Object {},
          "title": Object {},
        }
      }
      titleFormat={[Function]}
      values={
        Array [
          "",
        ]
      }
    >
      <div
        className="crosshair"
      >
        <div
          className="crosshairLabel"
          key="0"
        >
          threshold (Series #0): undefined
        </div>
      </div>
    </Crosshair>
  </XYPlot>
  <div
    className="flex"
  />
</div>
`;

exports[`ROCCurve does not break on no config 1`] = `
<div>
  <XYPlot
    animation={true}
    className=""
    classes={
      Object {
        "root": "root",
      }
    }
    height={520}
    onMouseLeave={[Function]}
    width={800}
    xDomain={null}
  >
    <VerticalGridLines
      attr="x"
      direction="vertical"
    />
    <HorizontalGridLines
      attr="y"
      direction="horizontal"
    />
    <XAxis
      attr="x"
      attrAxis="y"
      className="axis"
      orientation="bottom"
      title="fpr"
    />
    <YAxis
      attr="y"
      attrAxis="x"
      className="axis"
      orientation="left"
      title="tpr"
    />
    <LineSeries
      className=""
      color="#ddd"
      curve={null}
      data={
        Array [
          Object {
            "x": 0,
            "y": 0,
          },
          Object {
            "x": 0.01,
            "y": 0.01,
          },
          Object {
            "x": 0.02,
            "y": 0.02,
          },
          Object {
            "x": 0.03,
            "y": 0.03,
          },
          Object {
            "x": 0.04,
            "y": 0.04,
          },
          Object {
            "x": 0.05,
            "y": 0.05,
          },
          Object {
            "x": 0.06,
            "y": 0.06,
          },
          Object {
            "x": 0.07,
            "y": 0.07,
          },
          Object {
            "x": 0.08,
            "y": 0.08,
          },
          Object {
            "x": 0.09,
            "y": 0.09,
          },
          Object {
            "x": 0.1,
            "y": 0.1,
          },
          Object {
            "x": 0.11,
            "y": 0.11,
          },
          Object {
            "x": 0.12,
            "y": 0.12,
          },
          Object {
            "x": 0.13,
            "y": 0.13,
          },
          Object {
            "x": 0.14,
            "y": 0.14,
          },
          Object {
            "x": 0.15,
            "y": 0.15,
          },
          Object {
            "x": 0.16,
            "y": 0.16,
          },
          Object {
            "x": 0.17,
            "y": 0.17,
          },
          Object {
            "x": 0.18,
            "y": 0.18,
          },
          Object {
            "x": 0.19,
            "y": 0.19,
          },
          Object {
            "x": 0.2,
            "y": 0.2,
          },
          Object {
            "x": 0.21,
            "y": 0.21,
          },
          Object {
            "x": 0.22,
            "y": 0.22,
          },
          Object {
            "x": 0.23,
            "y": 0.23,
          },
          Object {
            "x": 0.24,
            "y": 0.24,
          },
          Object {
            "x": 0.25,
            "y": 0.25,
          },
          Object {
            "x": 0.26,
            "y": 0.26,
          },
          Object {
            "x": 0.27,
            "y": 0.27,
          },
          Object {
            "x": 0.28,
            "y": 0.28,
          },
          Object {
            "x": 0.29,
            "y": 0.29,
          },
          Object {
            "x": 0.3,
            "y": 0.3,
          },
          Object {
            "x": 0.31,
            "y": 0.31,
          },
          Object {
            "x": 0.32,
            "y": 0.32,
          },
          Object {
            "x": 0.33,
            "y": 0.33,
          },
          Object {
            "x": 0.34,
            "y": 0.34,
          },
          Object {
            "x": 0.35,
            "y": 0.35,
          },
          Object {
            "x": 0.36,
            "y": 0.36,
          },
          Object {
            "x": 0.37,
            "y": 0.37,
          },
          Object {
            "x": 0.38,
            "y": 0.38,
          },
          Object {
            "x": 0.39,
            "y": 0.39,
          },
          Object {
            "x": 0.4,
            "y": 0.4,
          },
          Object {
            "x": 0.41,
            "y": 0.41,
          },
          Object {
            "x": 0.42,
            "y": 0.42,
          },
          Object {
            "x": 0.43,
            "y": 0.43,
          },
          Object {
            "x": 0.44,
            "y": 0.44,
          },
          Object {
            "x": 0.45,
            "y": 0.45,
          },
          Object {
            "x": 0.46,
            "y": 0.46,
          },
          Object {
            "x": 0.47,
            "y": 0.47,
          },
          Object {
            "x": 0.48,
            "y": 0.48,
          },
          Object {
            "x": 0.49,
            "y": 0.49,
          },
          Object {
            "x": 0.5,
            "y": 0.5,
          },
          Object {
            "x": 0.51,
            "y": 0.51,
          },
          Object {
            "x": 0.52,
            "y": 0.52,
          },
          Object {
            "x": 0.53,
            "y": 0.53,
          },
          Object {
            "x": 0.54,
            "y": 0.54,
          },
          Object {
            "x": 0.55,
            "y": 0.55,
          },
          Object {
            "x": 0.56,
            "y": 0.56,
          },
          Object {
            "x": 0.57,
            "y": 0.57,
          },
          Object {
            "x": 0.58,
            "y": 0.58,
          },
          Object {
            "x": 0.59,
            "y": 0.59,
          },
          Object {
            "x": 0.6,
            "y": 0.6,
          },
          Object {
            "x": 0.61,
            "y": 0.61,
          },
          Object {
            "x": 0.62,
            "y": 0.62,
          },
          Object {
            "x": 0.63,
            "y": 0.63,
          },
          Object {
            "x": 0.64,
            "y": 0.64,
          },
          Object {
            "x": 0.65,
            "y": 0.65,
          },
          Object {
            "x": 0.66,
            "y": 0.66,
          },
          Object {
            "x": 0.67,
            "y": 0.67,
          },
          Object {
            "x": 0.68,
            "y": 0.68,
          },
          Object {
            "x": 0.69,
            "y": 0.69,
          },
          Object {
            "x": 0.7,
            "y": 0.7,
          },
          Object {
            "x": 0.71,
            "y": 0.71,
          },
          Object {
            "x": 0.72,
            "y": 0.72,
          },
          Object {
            "x": 0.73,
            "y": 0.73,
          },
          Object {
            "x": 0.74,
            "y": 0.74,
          },
          Object {
            "x": 0.75,
            "y": 0.75,
          },
          Object {
            "x": 0.76,
            "y": 0.76,
          },
          Object {
            "x": 0.77,
            "y": 0.77,
          },
          Object {
            "x": 0.78,
            "y": 0.78,
          },
          Object {
            "x": 0.79,
            "y": 0.79,
          },
          Object {
            "x": 0.8,
            "y": 0.8,
          },
          Object {
            "x": 0.81,
            "y": 0.81,
          },
          Object {
            "x": 0.82,
            "y": 0.82,
          },
          Object {
            "x": 0.83,
            "y": 0.83,
          },
          Object {
            "x": 0.84,
            "y": 0.84,
          },
          Object {
            "x": 0.85,
            "y": 0.85,
          },
          Object {
            "x": 0.86,
            "y": 0.86,
          },
          Object {
            "x": 0.87,
            "y": 0.87,
          },
          Object {
            "x": 0.88,
            "y": 0.88,
          },
          Object {
            "x": 0.89,
            "y": 0.89,
          },
          Object {
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "x": 0.91,
            "y": 0.91,
          },
          Object {
            "x": 0.92,
            "y": 0.92,
          },
          Object {
            "x": 0.93,
            "y": 0.93,
          },
          Object {
            "x": 0.94,
            "y": 0.94,
          },
          Object {
            "x": 0.95,
            "y": 0.95,
          },
          Object {
            "x": 0.96,
            "y": 0.96,
          },
          Object {
            "x": 0.97,
            "y": 0.97,
          },
          Object {
            "x": 0.98,
            "y": 0.98,
          },
          Object {
            "x": 0.99,
            "y": 0.99,
          },
        ]
      }
      getNull={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="dashed"
      strokeWidth={1}
      style={Object {}}
    />
    <HighlightOverlay
      className=""
      color="rgb(77, 182, 172)"
      enableX={true}
      enableY={false}
      onBrushEnd={[Function]}
      onDrag={[Function]}
      opacity={0.3}
    />
    <Crosshair
      itemsFormat={[Function]}
      style={
        Object {
          "box": Object {},
          "line": Object {},
          "title": Object {},
        }
      }
      titleFormat={[Function]}
      values={Array []}
    >
      <div
        className="crosshair"
      />
    </Crosshair>
  </XYPlot>
  <div
    className="flex"
  />
</div>
`;

exports[`ROCCurve renders a simple ROC curve given one config 1`] = `
<div>
  <XYPlot
    animation={true}
    className=""
    classes={
      Object {
        "root": "root",
      }
    }
    height={520}
    onMouseLeave={[Function]}
    width={800}
    xDomain={null}
  >
    <VerticalGridLines
      attr="x"
      direction="vertical"
    />
    <HorizontalGridLines
      attr="y"
      direction="horizontal"
    />
    <XAxis
      attr="x"
      attrAxis="y"
      className="axis"
      orientation="bottom"
      title="fpr"
    />
    <YAxis
      attr="y"
      attrAxis="x"
      className="axis"
      orientation="left"
      title="tpr"
    />
    <LineSeries
      className=""
      color="#ddd"
      curve={null}
      data={
        Array [
          Object {
            "x": 0,
            "y": 0,
          },
          Object {
            "x": 0.01,
            "y": 0.01,
          },
          Object {
            "x": 0.02,
            "y": 0.02,
          },
          Object {
            "x": 0.03,
            "y": 0.03,
          },
          Object {
            "x": 0.04,
            "y": 0.04,
          },
          Object {
            "x": 0.05,
            "y": 0.05,
          },
          Object {
            "x": 0.06,
            "y": 0.06,
          },
          Object {
            "x": 0.07,
            "y": 0.07,
          },
          Object {
            "x": 0.08,
            "y": 0.08,
          },
          Object {
            "x": 0.09,
            "y": 0.09,
          },
          Object {
            "x": 0.1,
            "y": 0.1,
          },
          Object {
            "x": 0.11,
            "y": 0.11,
          },
          Object {
            "x": 0.12,
            "y": 0.12,
          },
          Object {
            "x": 0.13,
            "y": 0.13,
          },
          Object {
            "x": 0.14,
            "y": 0.14,
          },
          Object {
            "x": 0.15,
            "y": 0.15,
          },
          Object {
            "x": 0.16,
            "y": 0.16,
          },
          Object {
            "x": 0.17,
            "y": 0.17,
          },
          Object {
            "x": 0.18,
            "y": 0.18,
          },
          Object {
            "x": 0.19,
            "y": 0.19,
          },
          Object {
            "x": 0.2,
            "y": 0.2,
          },
          Object {
            "x": 0.21,
            "y": 0.21,
          },
          Object {
            "x": 0.22,
            "y": 0.22,
          },
          Object {
            "x": 0.23,
            "y": 0.23,
          },
          Object {
            "x": 0.24,
            "y": 0.24,
          },
          Object {
            "x": 0.25,
            "y": 0.25,
          },
          Object {
            "x": 0.26,
            "y": 0.26,
          },
          Object {
            "x": 0.27,
            "y": 0.27,
          },
          Object {
            "x": 0.28,
            "y": 0.28,
          },
          Object {
            "x": 0.29,
            "y": 0.29,
          },
          Object {
            "x": 0.3,
            "y": 0.3,
          },
          Object {
            "x": 0.31,
            "y": 0.31,
          },
          Object {
            "x": 0.32,
            "y": 0.32,
          },
          Object {
            "x": 0.33,
            "y": 0.33,
          },
          Object {
            "x": 0.34,
            "y": 0.34,
          },
          Object {
            "x": 0.35,
            "y": 0.35,
          },
          Object {
            "x": 0.36,
            "y": 0.36,
          },
          Object {
            "x": 0.37,
            "y": 0.37,
          },
          Object {
            "x": 0.38,
            "y": 0.38,
          },
          Object {
            "x": 0.39,
            "y": 0.39,
          },
          Object {
            "x": 0.4,
            "y": 0.4,
          },
          Object {
            "x": 0.41,
            "y": 0.41,
          },
          Object {
            "x": 0.42,
            "y": 0.42,
          },
          Object {
            "x": 0.43,
            "y": 0.43,
          },
          Object {
            "x": 0.44,
            "y": 0.44,
          },
          Object {
            "x": 0.45,
            "y": 0.45,
          },
          Object {
            "x": 0.46,
            "y": 0.46,
          },
          Object {
            "x": 0.47,
            "y": 0.47,
          },
          Object {
            "x": 0.48,
            "y": 0.48,
          },
          Object {
            "x": 0.49,
            "y": 0.49,
          },
          Object {
            "x": 0.5,
            "y": 0.5,
          },
          Object {
            "x": 0.51,
            "y": 0.51,
          },
          Object {
            "x": 0.52,
            "y": 0.52,
          },
          Object {
            "x": 0.53,
            "y": 0.53,
          },
          Object {
            "x": 0.54,
            "y": 0.54,
          },
          Object {
            "x": 0.55,
            "y": 0.55,
          },
          Object {
            "x": 0.56,
            "y": 0.56,
          },
          Object {
            "x": 0.57,
            "y": 0.57,
          },
          Object {
            "x": 0.58,
            "y": 0.58,
          },
          Object {
            "x": 0.59,
            "y": 0.59,
          },
          Object {
            "x": 0.6,
            "y": 0.6,
          },
          Object {
            "x": 0.61,
            "y": 0.61,
          },
          Object {
            "x": 0.62,
            "y": 0.62,
          },
          Object {
            "x": 0.63,
            "y": 0.63,
          },
          Object {
            "x": 0.64,
            "y": 0.64,
          },
          Object {
            "x": 0.65,
            "y": 0.65,
          },
          Object {
            "x": 0.66,
            "y": 0.66,
          },
          Object {
            "x": 0.67,
            "y": 0.67,
          },
          Object {
            "x": 0.68,
            "y": 0.68,
          },
          Object {
            "x": 0.69,
            "y": 0.69,
          },
          Object {
            "x": 0.7,
            "y": 0.7,
          },
          Object {
            "x": 0.71,
            "y": 0.71,
          },
          Object {
            "x": 0.72,
            "y": 0.72,
          },
          Object {
            "x": 0.73,
            "y": 0.73,
          },
          Object {
            "x": 0.74,
            "y": 0.74,
          },
          Object {
            "x": 0.75,
            "y": 0.75,
          },
          Object {
            "x": 0.76,
            "y": 0.76,
          },
          Object {
            "x": 0.77,
            "y": 0.77,
          },
          Object {
            "x": 0.78,
            "y": 0.78,
          },
          Object {
            "x": 0.79,
            "y": 0.79,
          },
          Object {
            "x": 0.8,
            "y": 0.8,
          },
          Object {
            "x": 0.81,
            "y": 0.81,
          },
          Object {
            "x": 0.82,
            "y": 0.82,
          },
          Object {
            "x": 0.83,
            "y": 0.83,
          },
          Object {
            "x": 0.84,
            "y": 0.84,
          },
          Object {
            "x": 0.85,
            "y": 0.85,
          },
          Object {
            "x": 0.86,
            "y": 0.86,
          },
          Object {
            "x": 0.87,
            "y": 0.87,
          },
          Object {
            "x": 0.88,
            "y": 0.88,
          },
          Object {
            "x": 0.89,
            "y": 0.89,
          },
          Object {
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "x": 0.91,
            "y": 0.91,
          },
          Object {
            "x": 0.92,
            "y": 0.92,
          },
          Object {
            "x": 0.93,
            "y": 0.93,
          },
          Object {
            "x": 0.94,
            "y": 0.94,
          },
          Object {
            "x": 0.95,
            "y": 0.95,
          },
          Object {
            "x": 0.96,
            "y": 0.96,
          },
          Object {
            "x": 0.97,
            "y": 0.97,
          },
          Object {
            "x": 0.98,
            "y": 0.98,
          },
          Object {
            "x": 0.99,
            "y": 0.99,
          },
        ]
      }
      getNull={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="dashed"
      strokeWidth={1}
      style={Object {}}
    />
    <LineSeries
      className=""
      color="#4285f4"
      curve="curveBasis"
      data={
        Array [
          Object {
            "label": "1",
            "x": 0,
            "y": 0,
          },
          Object {
            "label": "2",
            "x": 0.2,
            "y": 0.3,
          },
          Object {
            "label": "3",
            "x": 0.5,
            "y": 0.7,
          },
          Object {
            "label": "4",
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "label": "5",
            "x": 1,
            "y": 1,
          },
        ]
      }
      getNull={[Function]}
      key="0"
      onNearestX={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="solid"
      strokeWidth={2}
      style={Object {}}
    />
    <HighlightOverlay
      className=""
      color="rgb(77, 182, 172)"
      enableX={true}
      enableY={false}
      onBrushEnd={[Function]}
      onDrag={[Function]}
      opacity={0.3}
    />
    <Crosshair
      itemsFormat={[Function]}
      style={
        Object {
          "box": Object {},
          "line": Object {},
          "title": Object {},
        }
      }
      titleFormat={[Function]}
      values={
        Array [
          "",
        ]
      }
    >
      <div
        className="crosshair"
      >
        <div
          className="crosshairLabel"
          key="0"
        >
          threshold (Series #0): undefined
        </div>
      </div>
    </Crosshair>
  </XYPlot>
  <div
    className="flex"
  />
</div>
`;

exports[`ROCCurve renders an ROC curve using three configs 1`] = `
<div>
  <XYPlot
    animation={true}
    className=""
    classes={
      Object {
        "root": "root",
      }
    }
    height={520}
    onMouseLeave={[Function]}
    width={800}
    xDomain={null}
  >
    <VerticalGridLines
      attr="x"
      direction="vertical"
    />
    <HorizontalGridLines
      attr="y"
      direction="horizontal"
    />
    <XAxis
      attr="x"
      attrAxis="y"
      className="axis"
      orientation="bottom"
      title="fpr"
    />
    <YAxis
      attr="y"
      attrAxis="x"
      className="axis"
      orientation="left"
      title="tpr"
    />
    <LineSeries
      className=""
      color="#ddd"
      curve={null}
      data={
        Array [
          Object {
            "x": 0,
            "y": 0,
          },
          Object {
            "x": 0.01,
            "y": 0.01,
          },
          Object {
            "x": 0.02,
            "y": 0.02,
          },
          Object {
            "x": 0.03,
            "y": 0.03,
          },
          Object {
            "x": 0.04,
            "y": 0.04,
          },
          Object {
            "x": 0.05,
            "y": 0.05,
          },
          Object {
            "x": 0.06,
            "y": 0.06,
          },
          Object {
            "x": 0.07,
            "y": 0.07,
          },
          Object {
            "x": 0.08,
            "y": 0.08,
          },
          Object {
            "x": 0.09,
            "y": 0.09,
          },
          Object {
            "x": 0.1,
            "y": 0.1,
          },
          Object {
            "x": 0.11,
            "y": 0.11,
          },
          Object {
            "x": 0.12,
            "y": 0.12,
          },
          Object {
            "x": 0.13,
            "y": 0.13,
          },
          Object {
            "x": 0.14,
            "y": 0.14,
          },
          Object {
            "x": 0.15,
            "y": 0.15,
          },
          Object {
            "x": 0.16,
            "y": 0.16,
          },
          Object {
            "x": 0.17,
            "y": 0.17,
          },
          Object {
            "x": 0.18,
            "y": 0.18,
          },
          Object {
            "x": 0.19,
            "y": 0.19,
          },
          Object {
            "x": 0.2,
            "y": 0.2,
          },
          Object {
            "x": 0.21,
            "y": 0.21,
          },
          Object {
            "x": 0.22,
            "y": 0.22,
          },
          Object {
            "x": 0.23,
            "y": 0.23,
          },
          Object {
            "x": 0.24,
            "y": 0.24,
          },
          Object {
            "x": 0.25,
            "y": 0.25,
          },
          Object {
            "x": 0.26,
            "y": 0.26,
          },
          Object {
            "x": 0.27,
            "y": 0.27,
          },
          Object {
            "x": 0.28,
            "y": 0.28,
          },
          Object {
            "x": 0.29,
            "y": 0.29,
          },
          Object {
            "x": 0.3,
            "y": 0.3,
          },
          Object {
            "x": 0.31,
            "y": 0.31,
          },
          Object {
            "x": 0.32,
            "y": 0.32,
          },
          Object {
            "x": 0.33,
            "y": 0.33,
          },
          Object {
            "x": 0.34,
            "y": 0.34,
          },
          Object {
            "x": 0.35,
            "y": 0.35,
          },
          Object {
            "x": 0.36,
            "y": 0.36,
          },
          Object {
            "x": 0.37,
            "y": 0.37,
          },
          Object {
            "x": 0.38,
            "y": 0.38,
          },
          Object {
            "x": 0.39,
            "y": 0.39,
          },
          Object {
            "x": 0.4,
            "y": 0.4,
          },
          Object {
            "x": 0.41,
            "y": 0.41,
          },
          Object {
            "x": 0.42,
            "y": 0.42,
          },
          Object {
            "x": 0.43,
            "y": 0.43,
          },
          Object {
            "x": 0.44,
            "y": 0.44,
          },
          Object {
            "x": 0.45,
            "y": 0.45,
          },
          Object {
            "x": 0.46,
            "y": 0.46,
          },
          Object {
            "x": 0.47,
            "y": 0.47,
          },
          Object {
            "x": 0.48,
            "y": 0.48,
          },
          Object {
            "x": 0.49,
            "y": 0.49,
          },
          Object {
            "x": 0.5,
            "y": 0.5,
          },
          Object {
            "x": 0.51,
            "y": 0.51,
          },
          Object {
            "x": 0.52,
            "y": 0.52,
          },
          Object {
            "x": 0.53,
            "y": 0.53,
          },
          Object {
            "x": 0.54,
            "y": 0.54,
          },
          Object {
            "x": 0.55,
            "y": 0.55,
          },
          Object {
            "x": 0.56,
            "y": 0.56,
          },
          Object {
            "x": 0.57,
            "y": 0.57,
          },
          Object {
            "x": 0.58,
            "y": 0.58,
          },
          Object {
            "x": 0.59,
            "y": 0.59,
          },
          Object {
            "x": 0.6,
            "y": 0.6,
          },
          Object {
            "x": 0.61,
            "y": 0.61,
          },
          Object {
            "x": 0.62,
            "y": 0.62,
          },
          Object {
            "x": 0.63,
            "y": 0.63,
          },
          Object {
            "x": 0.64,
            "y": 0.64,
          },
          Object {
            "x": 0.65,
            "y": 0.65,
          },
          Object {
            "x": 0.66,
            "y": 0.66,
          },
          Object {
            "x": 0.67,
            "y": 0.67,
          },
          Object {
            "x": 0.68,
            "y": 0.68,
          },
          Object {
            "x": 0.69,
            "y": 0.69,
          },
          Object {
            "x": 0.7,
            "y": 0.7,
          },
          Object {
            "x": 0.71,
            "y": 0.71,
          },
          Object {
            "x": 0.72,
            "y": 0.72,
          },
          Object {
            "x": 0.73,
            "y": 0.73,
          },
          Object {
            "x": 0.74,
            "y": 0.74,
          },
          Object {
            "x": 0.75,
            "y": 0.75,
          },
          Object {
            "x": 0.76,
            "y": 0.76,
          },
          Object {
            "x": 0.77,
            "y": 0.77,
          },
          Object {
            "x": 0.78,
            "y": 0.78,
          },
          Object {
            "x": 0.79,
            "y": 0.79,
          },
          Object {
            "x": 0.8,
            "y": 0.8,
          },
          Object {
            "x": 0.81,
            "y": 0.81,
          },
          Object {
            "x": 0.82,
            "y": 0.82,
          },
          Object {
            "x": 0.83,
            "y": 0.83,
          },
          Object {
            "x": 0.84,
            "y": 0.84,
          },
          Object {
            "x": 0.85,
            "y": 0.85,
          },
          Object {
            "x": 0.86,
            "y": 0.86,
          },
          Object {
            "x": 0.87,
            "y": 0.87,
          },
          Object {
            "x": 0.88,
            "y": 0.88,
          },
          Object {
            "x": 0.89,
            "y": 0.89,
          },
          Object {
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "x": 0.91,
            "y": 0.91,
          },
          Object {
            "x": 0.92,
            "y": 0.92,
          },
          Object {
            "x": 0.93,
            "y": 0.93,
          },
          Object {
            "x": 0.94,
            "y": 0.94,
          },
          Object {
            "x": 0.95,
            "y": 0.95,
          },
          Object {
            "x": 0.96,
            "y": 0.96,
          },
          Object {
            "x": 0.97,
            "y": 0.97,
          },
          Object {
            "x": 0.98,
            "y": 0.98,
          },
          Object {
            "x": 0.99,
            "y": 0.99,
          },
        ]
      }
      getNull={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="dashed"
      strokeWidth={1}
      style={Object {}}
    />
    <LineSeries
      className=""
      color="#4285f4"
      curve="curveBasis"
      data={
        Array [
          Object {
            "label": "1",
            "x": 0,
            "y": 0,
          },
          Object {
            "label": "2",
            "x": 0.2,
            "y": 0.3,
          },
          Object {
            "label": "3",
            "x": 0.5,
            "y": 0.7,
          },
          Object {
            "label": "4",
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "label": "5",
            "x": 1,
            "y": 1,
          },
        ]
      }
      getNull={[Function]}
      key="0"
      onNearestX={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="solid"
      strokeWidth={2}
      style={Object {}}
    />
    <LineSeries
      className=""
      color="#efb4a3"
      curve="curveBasis"
      data={
        Array [
          Object {
            "label": "1",
            "x": 0,
            "y": 0,
          },
          Object {
            "label": "2",
            "x": 0.2,
            "y": 0.3,
          },
          Object {
            "label": "3",
            "x": 0.5,
            "y": 0.7,
          },
          Object {
            "label": "4",
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "label": "5",
            "x": 1,
            "y": 1,
          },
        ]
      }
      getNull={[Function]}
      key="1"
      onNearestX={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="solid"
      strokeWidth={2}
      style={Object {}}
    />
    <LineSeries
      className=""
      color="#684e91"
      curve="curveBasis"
      data={
        Array [
          Object {
            "label": "1",
            "x": 0,
            "y": 0,
          },
          Object {
            "label": "2",
            "x": 0.2,
            "y": 0.3,
          },
          Object {
            "label": "3",
            "x": 0.5,
            "y": 0.7,
          },
          Object {
            "label": "4",
            "x": 0.9,
            "y": 0.9,
          },
          Object {
            "label": "5",
            "x": 1,
            "y": 1,
          },
        ]
      }
      getNull={[Function]}
      key="2"
      onNearestX={[Function]}
      opacity={1}
      stack={false}
      strokeStyle="solid"
      strokeWidth={2}
      style={Object {}}
    />
    <HighlightOverlay
      className=""
      color="rgb(77, 182, 172)"
      enableX={true}
      enableY={false}
      onBrushEnd={[Function]}
      onDrag={[Function]}
      opacity={0.3}
    />
    <Crosshair
      itemsFormat={[Function]}
      style={
        Object {
          "box": Object {},
          "line": Object {},
          "title": Object {},
        }
      }
      titleFormat={[Function]}
      values={
        Array [
          "",
          "",
          "",
        ]
      }
    >
      <div
        className="crosshair"
      >
        <div
          className="crosshairLabel"
          key="0"
        >
          threshold (Series #0): undefined
        </div>
        <div
          className="crosshairLabel"
          key="1"
        >
          threshold (Series #1): undefined
        </div>
        <div
          className="crosshairLabel"
          key="2"
        >
          threshold (Series #2): undefined
        </div>
      </div>
    </Crosshair>
  </XYPlot>
  <div
    className="flex"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <DiscreteColorLegendItem
        className=""
        colors={
          Array [
            "#12939A",
            "#79C7E3",
            "#1A3177",
            "#FF9833",
            "#EF5D28",
          ]
        }
        items={
          Array [
            Object {
              "color": "#4285f4",
              "title": "Series #1",
            },
            Object {
              "color": "#efb4a3",
              "title": "Series #2",
            },
            Object {
              "color": "#684e91",
              "title": "Series #3",
            },
          ]
        }
        orientation="horizontal"
      />
    </div>
  </div>
</div>
`;
